# VM14K-Megarepo

./: README.md
DataPlatformEtlService/: .env.example  .flake8  .gitignore  Dockerfile  README.md  postman_collection.json  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  server.py
DataPlatformEtlService/migrations/: pipeline.postgres.sql
DataPlatformEtlService/scripts/: add_f_conn_configs.py  add_f_ext_configs.py  add_f_loader_configs.py  add_f_pipelines_configs.py  add_f_spark_transformer_configs.py  connector_configs.yaml.example  test_spark_transformer.py
DataPlatformEtlService/src/: api.py  app.py
DataPlatformEtlService/src/common/: consts.py
DataPlatformEtlService/src/consts/: __init__.py  etl_metadata.py
DataPlatformEtlService/src/custom_types/: common.py
DataPlatformEtlService/src/dtos/: __init__.py  add_f_conn_configs.py  add_f_ext_configs.py  add_f_loader_configs.py  add_f_pipeline_configs.py  add_f_spark_transformer_configs.py  base.py  run_f_pipeline_configs.py  run_f_spark_transformer_configs.py
DataPlatformEtlService/src/entities/: __init__.py  base.py  f_conn_configs.py  f_ext_configs.py  f_ext_conn_deps.py  f_loader_configs.py  f_loader_conn_deps.py  f_pipeline_configs.py  f_spark_transformer_configs.py
DataPlatformEtlService/src/processors/: common.py
DataPlatformEtlService/src/query_builders/: postgres.py
DataPlatformEtlService/src/repositories/: __init__.py  f_conn_configs.py  (+7 more)
DataPlatformEtlService/tests/: api.py
Inference/APIServices/: .gitignore  README.md  batch_run.py  main.py  pyproject.toml
(+126 files in other folders)
